<resources>
    <string name="app_name">Karuna</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Login-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username <font fgcolor="#FF0000">*</font></string>
    <string name="prompt_password">Password <font fgcolor="#FF0000">*</font></string>
    <string name="action_login">Login</string>
    <string name="action_create_request">Create Request</string>
    <string name="action_close_request">Close Request</string>
    <string name="action_add">Add</string>
    <string name="invalid_email">Invalid Username</string>
    <string name="invalid_password">Password must be greater than 6 characters</string>
    <string name="login_failed">Invalid credentials</string>

    <!--Navigation Drawer-->
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_family_details">Family Details</string>

    <!--Location-->
    <string name="address_and_location">Address &amp; Location</string>
    <string name="address">Address<sup>*</sup></string>
    <string name="area">Area/Landmark<sup>*</sup></string>
    <string name="pin">PIN Code</string>
    <string name="address_error">Address is mandatory</string>
    <string name="landmark_error">Landmark is mandatory</string>

    <!--Family-->
    <string name="family_details">Family Details</string>
    <string name="no_of_families">Number of Families</string>
    <string name="family_owner_name">Family Owner Name</string>
    <string name="contact_number">Contact Number<sup>*</sup></string>
    <string name="no_of_kits">Number of Food Kits<sup>*</sup></string>
    <string name="contact_name">Local Contact Name</string>
    <string name="local_contact_number">Local Contact Phone</string>
    <string name="no_of_children">Number of Children</string>
    <string name="no_of_adults">Number of Adults</string>

    <string name="welcome_user">Welcome %1$s!</string>
    <string name="welcome_message">Welcome to</string>
    <string name="karuna_relief">Karuna Relief</string>
    <string name="login_message">Karuna Relief Login</string>
    <string name="secondary_line">Compassionate Volunteers are working together efficiently to bring food/relief to the distressed in PUNE City and surrounding villages.</string>
    <string name="get_started">Let\'s Get Started</string>
    <string name="is_first_time_installation">IS_FIRST_TIME_INSTALLATION</string>
    <string name="action_logout">Logout</string>

    <string name="action_about_us">About us</string>
    <string name="action_about_us_title">Pragati Foundation</string>
    <string name="about_us_description">Many landless, migrant labourers and their families in and around Pune, unemployed people, the elderly and sick have been hit hard by the lockdown caused by
        COVID Health Crisis. Pragati Foundation, along with a Network of other NGOs and Volunteers is currently focusing on distributing relief FOOD KITS to distressed families. Just
        Rs. 500 could help feed a family of 4 for around 10 days.
    </string>
    <string name="about_us_heading">Please Donate to help supply food kits to the urban and rural poor around Pune and help them get through the COVID Crisis</string>
    <string name="about_us_donation_from_india">Donation from India</string>
    <string name="about_us_donation_account_name">Account Name</string>
    <string name="about_us_donation_from_india_account_name_value">Pragati Foundation</string>
    <string name="about_us_donation_from_bank_name">Bank Name</string>
    <string name="about_us_donation_from_india_bank_name_value">ICICI Bank, \nAundh Branch</string>
    <string name="about_us_donation_ac_no">Account Number</string>
    <string name="about_us_donation_from_india_ac_no_value">007301023669</string>
    <string name="about_us_donation_ifsc">IFSC</string>
    <string name="about_us_donation_from_india_ifsc_value">ICIC0000073</string>

    <string name="about_us_donation_international_heading">For Overseas Contribution</string>
    <string name="about_us_donation_from_abroad_bank_name_value">State Bank of India, \nAundh Branch, \nPune, Maharashtra, \nIndia</string>
    <string name="about_us_donation_from_abroad_ac_no_value">10146130326</string>
    <string name="about_us_donation_from_abroad_ifsc_value">SBIN0008784</string>
    <string name="about_us_donation_from_abroad_swift_code">Swift Code</string>
    <string name="about_us_donation_from_abroad_swift_code_value">SBIN INBB \n218(DG Pune)</string>
    <string name="about_us_contact">Contact Details</string>
    <string name="about_us_contact_person_1">Ranjan Sah</string>
    <string name="about_us_contact_person_1_number">9226787919</string>
    <string name="about_us_contact_person_2">Mohan Kandekar</string>
    <string name="about_us_contact_person_2_number">7798072322</string>
    <string name="about_us_contact_person_3">Deepak Ghatwilkar</string>
    <string name="about_us_contact_person_3_number">9130784702</string>
    <string name="about_us_donation_request">Your kind donation will be exempted from Tax under section 80G of the IT Act. We will provide you with relevant references and receipts.</string>
    <string name="about_us_app_description">Karuna app is designed to help distribute the FOOD KITS to the people in need.</string>

    <!--Kit-->
    <string name="kit_type_prompt">Kit Type<sup>*</sup></string>
    <string name="kit_details">Kit Details</string>
    <string name="description">Kit Description</string>
    <string-array name="kit_types">
        <item>Dry Ration</item>
        <item>Cooked Food</item>
    </string-array>

    <string name="save">Save</string>

    <!--My Requests-->
    <string name="request">Request</string>s
    <string name="my_requests">My Requests</string>
    <string name="no_requests">There are no food \nrequests at the moment</string>
    <string name="create_new_request">Click on \"+\" to create a new request</string>
    <string name="update_request">Update Request</string>

    <string name="request_location_details">Location Details</string>
    <string name="action_edit">Edit Details</string>
    <string name="request_kill_details">Kit Details</string>
    <string name="request_families">Families</string>
    <string name="action_modify">Modify</string>
    <string name="request_supplier_details">Supplier Details</string>
    <string name="request_volunteers">Volunteers</string>

    <string name="request_create_failure">There is an error occurred while creating the request.</string>
    <string name="request_update_failure">There is an error occurred while updating the request.</string>
    <string name="request_close_failure">There is an error occurred while closing the request.</string>
    <string name="supplier_retrieve_failure">There is an error occurred while retrieving the supplier.</string>
    <string name="request_create_success">Request created successfully</string>
    <string name="request_update_success">Request updated successfully</string>
    <string name="request_close_success">Request closed successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="request_close_confirmation_message">Are you sure you want to close this request?</string>
    <string name="no_of_kits_error">Please enter number of food kit required</string>
    <string name="invalid_contact_no_error">Please enter valid contact number</string>
    <string name="contact_no_empty_error">Please enter contact number</string>

    <plurals name="no_of_families">
        <item quantity="one">%d Family</item>
        <item quantity="other">%d Families</item>
    </plurals>

    <plurals name="no_of_kits">
        <item quantity="one">%d Kit</item>
        <item quantity="other">%d Kits</item>
    </plurals>

    <plurals name="families">
        <item quantity="one">\ \ %d family \ \ </item>
        <item quantity="other">\ \ %d families \ \ </item>
    </plurals>

    <plurals name="served_days_ago">
        <item quantity="one">\ \ Served %d day ago \ \ </item>
        <item quantity="other">\ \ Served %d days ago \ \ </item>
    </plurals>

</resources>
