<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pragati.karuna.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_add_location"
            app:destination="@id/nav_add_location" />
        <argument
            android:name="location"
            app:argType="com.pragati.karuna.models.Location" />

        <action
            android:id="@+id/action_add_family"
            app:destination="@id/nav_add_family" />
        <argument
            android:name="family"
            app:argType="com.pragati.karuna.models.Family" />

        <action
            android:id="@+id/action_add_kit"
            app:destination="@id/nav_add_kit" />
        <argument
            android:name="kit"
            app:argType="com.pragati.karuna.models.Kit" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_location"
        android:name="com.pragati.karuna.ui.location.AddLocationFragment"
        android:label="@string/address_and_location"
        tools:layout="@layout/fragment_add_location"></fragment>

    <fragment
        android:id="@+id/nav_add_family"
        android:name="com.pragati.karuna.ui.family.AddFamiyFragment"
        android:label="@string/family_details"
        tools:layout="@layout/fragment_add_family">

    </fragment>

    <fragment
        android:id="@+id/nav_add_kit"
        android:name="com.pragati.karuna.ui.kit.AddKitFragment"
        android:label="@string/kit_details"
        tools:layout="@layout/fragment_add_kit">

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pragati.karuna.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.pragati.karuna.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>