<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".request.ui.AddFamilyFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_family_leader"
        style="@style/AppTheme.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_family_leader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/family_owner_name"
            android:inputType="textPersonName|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_contact_number"
        style="@style/AppTheme.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_family_leader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_no_of_adults"
        style="@style/AppTheme.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_contact_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_no_of_adults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_of_adults"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_no_of_children"
        style="@style/AppTheme.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_no_of_adults">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_no_of_children"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_of_children"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_no_of_kits"
        style="@style/AppTheme.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_no_of_children">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_no_of_kits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_of_kits"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_no_of_kits" />
</androidx.constraintlayout.widget.ConstraintLayout>