<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".request.ui.AboutUsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_about_us_title"
        android:text="@string/action_about_us_title"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        android:padding="@dimen/view_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_about_us_description"
        android:text="@string/about_us_description"
        android:textSize="@dimen/text_size_small"
        android:paddingLeft="@dimen/view_padding"
        android:paddingRight="@dimen/view_padding"
        app:layout_constraintTop_toBottomOf="@id/textview_about_us_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_about_us_heading"
        android:text="@string/about_us_heading"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:padding="@dimen/view_padding"
        app:layout_constraintTop_toBottomOf="@id/textview_about_us_description"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_about_us_info"
        android:text="@string/about_us_description"
        android:textSize="@dimen/text_size_small"
        android:paddingLeft="@dimen/view_padding"
        android:paddingRight="@dimen/view_padding"
        app:layout_constraintTop_toBottomOf="@id/textview_about_us_heading"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>